# llvm-cov-pretty

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs  cliff.toml  package.json  pnpm-lock.yaml  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml
assets/: index.css
assets/themes/: README.md
src/: cargo.rs  cli.rs  highlight.rs  main.rs  minify.rs  schema.rs  templates.rs
templates/: base.html  color.html  index.html  source.html
