[package]
name = "llvm-cov-pretty"
version = "0.1.7"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
description = "More beautiful HTML reports for llvm-cov/cargo-llvm-cov"
readme = "README.md"
homepage = "https://github.com/dnaka91/llvm-cov-pretty"
repository = "https://github.com/dnaka91/llvm-cov-pretty"
license = "AGPL-3.0-only"
keywords = ["coverage", "llvm-cov", "testing", "reporting"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::testing",
    "visualization",
]
include = [
    "/assets/themes/**/*.tmTheme",
    "/assets/style.css",
    "/src/**/*",
    "/templates/**/*",
    "/build.rs",
    "/LICENSE",
    "/README.md",
]

[dependencies]
askama = { version = "0.12.0", default-features = false }
askama_escape = "0.10.3"
camino = { version = "1.1.6", features = ["serde1"] }
clap = { version = "4.4.4", features = ["derive"] }
clap_complete = "4.4.1"
clap_mangen = "0.2.14"
color-eyre = { version = "0.6.2", default-features = false }
ignore = "0.4.20"
minify-html = "0.11.1"
open = "5.0.0"
rayon = "1.8.0"
rustc-demangle = "0.1.23"
semver = { version = "1.0.19", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_path_to_error = "0.1.14"
time = { version = "0.3.29", features = ["formatting", "local-offset", "macros"] }

[dependencies.syntect]
version = "5.1.0"
default-features = false
features = ["default-syntaxes", "parsing", "regex-fancy"]

[dev-dependencies]
indoc = "2.0.4"

[build-dependencies]
css-minify = "0.3.1"
heck = "0.4.1"
quote = "1.0.33"

[build-dependencies.syntect]
version = "5.1.0"
default-features = false
features = ["default-themes", "html", "plist-load", "regex-fancy"]

[profile.release]
lto = true
strip = true
