[package]
name = "llvm-cov-pretty"
version = "0.1.9"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
description = "More beautiful HTML reports for llvm-cov/cargo-llvm-cov"
readme = "README.md"
homepage = "https://github.com/dnaka91/llvm-cov-pretty"
repository = "https://github.com/dnaka91/llvm-cov-pretty"
license = "AGPL-3.0-only"
keywords = ["coverage", "llvm-cov", "testing", "reporting"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::testing",
    "visualization",
]
include = [
    "/assets/themes/**/*.tmTheme",
    "/assets/style.css",
    "/src/**/*",
    "/templates/**/*",
    "/build.rs",
    "/LICENSE",
    "/README.md",
]

[dependencies]
askama = { version = "0.12.1", default-features = false }
askama_escape = "0.10.3"
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.17", features = ["derive", "wrap_help"] }
clap_complete = "4.5.26"
clap_mangen = "0.2.23"
color-eyre = { version = "0.6.3", default-features = false }
ignore = "0.4.23"
minify-html = "0.15.0"
open = "5.3.0"
rayon = "1.10.0"
rustc-demangle = "0.1.24"
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_path_to_error = "0.1.16"
time = { version = "0.3.36", features = ["formatting", "local-offset", "macros"] }

[dependencies.syntect]
version = "5.2.0"
default-features = false
features = ["default-syntaxes", "parsing", "regex-fancy"]

[dev-dependencies]
indoc = "2.0.5"

[build-dependencies]
css-minify = "0.5.2"
heck = "0.5.0"
quote = "1.0.37"

[build-dependencies.syntect]
version = "5.2.0"
default-features = false
features = ["default-themes", "html", "plist-load", "regex-fancy"]

[profile.release]
lto = true
strip = true
